created first html tags with ids

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,30 @@
 
     <body>
 
+        <main>
+            <ul>
+                <li id="build-skill">
+                    
+                </li>
+
+                <li id="plant-skill">
+
+                </li>
+
+                <li id="dev-skill">
+
+                </li>
+
+                <li id="defense-skill">
+
+                </li>
+
+                <li id="survive-skill">
+
+                </li>
+            </ul>
+        </main>
+
         <script src="../assets/js/"></script>
     </body>
 
