set class for my skills

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,23 +11,23 @@
 
         <main>
             <ul>
-                <li id="build-skill">
+                <li id="build-skill" class="skill">
                     
                 </li>
 
-                <li id="plant-skill">
+                <li id="plant-skill" class="skill">
 
                 </li>
 
-                <li id="dev-skill">
+                <li id="dev-skill" class="skill">
 
                 </li>
 
-                <li id="defense-skill">
+                <li id="defense-skill" class="skill">
 
                 </li>
 
-                <li id="survive-skill">
+                <li id="survive-skill" class="skill">
 
                 </li>
             </ul>
