--- a/pages/index.html
+++ b/pages/index.html
@@ -11,34 +11,24 @@
 
         <main>
             <ul>
-                <li>
-                    <div id="build-skill" class="skill">
-
-                    </div>
+                <li id="build-skill" class="skill">
+                    
                 </li>
 
-                <li>
-                    <div id="plant-skill" class="skill">
+                <li id="plant-skill" class="skill">
 
-                    </div>
                 </li>
 
-                <li>
-                    <div id="dev-skill" class="skill">
+                <li id="dev-skill" class="skill">
 
-                    </div>
                 </li>
 
-                <li>
-                    <div id="defense-skill" class="skill">
+                <li id="defense-skill" class="skill">
 
-                    </div>
                 </li>
 
-                <li>
-                    <div id="survive-skill" class="skill">
+                <li id="survive-skill" class="skill">
 
-                    </div>
                 </li>
             </ul>
         </main>
