ajusted ids and tags on html, and added properties

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,24 +11,24 @@
 
         <main>
             <ul>
-                <li id="build-skill" class="skill">
-                    
+                <li >
+                    <div id="build-skill" class="skill"></div>
                 </li>
 
-                <li id="plant-skill" class="skill">
-
+                <li>
+                    <div id="plant-skill" class="skill"></div>
                 </li>
 
-                <li id="dev-skill" class="skill">
-
+                <li>
+                    <div id="dev-skill" class="skill"></div>
                 </li>
 
-                <li id="defense-skill" class="skill">
-
+                <li>
+                    <div id="defense-skill" class="skill"></div>
                 </li>
 
-                <li id="survive-skill" class="skill">
-
+                <li>
+                    <div id="survive-skill" class="skill"></div>
                 </li>
             </ul>
         </main>
