added principal phrase

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,11 @@
     <body>
 
         <main>
+
+            <div class="principal-phrase">
+                <h1>Strength</h1>
+            </div>
+
             <ul>
                 <li id="li1">
                     <div id="build-skill" class="skill"></div>
