--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,9 @@
         <main>
 
             <div class="principal-phrase">
-                <h1>Strength</h1>
+                <h1 class="skill-phrase">Strength</h1>
+                <h1 class="skill-phrase">Resistance</h1>
+                <h1 class="skill-phrase">Respiration</h1>
             </div>
 
             <ul>
