--- a/pages/index.html
+++ b/pages/index.html
@@ -40,7 +40,7 @@
             </ul>
         </main>
 
-        <script src="../assets/js/"></script>
+        <script src="../assets/js/string-of-slide.js"></script>
     </body>
 
 </html>
