--- a/pages/index.html
+++ b/pages/index.html
@@ -12,9 +12,7 @@
         <main>
 
             <div class="principal-phrase">
-                <h1 class="skill-phrase.active">Strength</h1>
-                <h1 class="skill-phrase">Resistance</h1>
-                <h1 class="skill-phrase">Respiration</h1>
+                <h1 class="skill-phrase"></h1>
             </div>
 
             <ul>
