--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
         <main>
 
             <div class="principal-phrase">
-                <h1 class="skill-phrase"></h1>
+                <h1 id="first-phrase" class="skill-phrase"></h1>
             </div>
 
             <ul>
