--- a/pages/index.html
+++ b/pages/index.html
@@ -17,23 +17,33 @@
 
             <ul>
                 <li id="li1">
-                    <div id="build-skill" class="skill"></div>
+                    <div id="build-skill" class="skill">
+                        
+                    </div>
                 </li>
 
                 <li id="li2">
-                    <div id="plant-skill" class="skill"></div>
+                    <div id="plant-skill" class="skill">
+
+                    </div>
                 </li>
 
                 <li id="li3">
-                    <div id="dev-skill" class="skill"></div>
+                    <div id="dev-skill" class="skill">
+
+                    </div>
                 </li>
 
                 <li id="li4">
-                    <div id="defense-skill" class="skill"></div>
+                    <div id="defense-skill" class="skill">
+
+                    </div>
                 </li>
 
                 <li id="li5">
-                    <div id="survive-skill" class="skill"></div>
+                    <div id="survive-skill" class="skill">
+                        
+                    </div>
                 </li>
             </ul>
         </main>
