adjusted html and svgs

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,31 +18,56 @@
             <ul>
                 <li id="li1">
                     <div id="build-skill" class="skill">
-                        
+                        <section class="sections">
+                            <div>
+                                <img src="/assets/imgs/first-page/icons/screwdriver.svg" alt="build" width="50" height="50">
+                                <h3>Build</h3>
+                            </div>
+                        </section>
                     </div>
                 </li>
 
                 <li id="li2">
                     <div id="plant-skill" class="skill">
-
+                        <section class="sections">
+                            <div>
+                                <img src="/assets/imgs/first-page/icons/gardening.svg" alt="build" width="50" height="50">
+                                <h3>Garden</h3>
+                            </div>
+                        </section>
                     </div>
                 </li>
 
                 <li id="li3">
                     <div id="dev-skill" class="skill">
-
+                        <section class="sections">
+                            <div>
+                                <img src="/assets/imgs/first-page/icons/programmer.svg" alt="build" width="50" height="50">
+                                <h3>Dev</h3>
+                            </div>
+                        </section>
                     </div>
                 </li>
 
                 <li id="li4">
                     <div id="defense-skill" class="skill">
-
+                        <section class="sections">
+                            <div>
+                                <img src="/assets/imgs/first-page/icons/defense.svg" alt="build" width="50" height="50">
+                                <h3>Defense</h3>
+                            </div>
+                        </section>
                     </div>
                 </li>
 
                 <li id="li5">
                     <div id="survive-skill" class="skill">
-                        
+                        <section class="sections">
+                            <div>
+                                <img src="/assets/imgs/first-page/icons/survive.svg" alt="build" width="50" height="50">
+                                <h3>Survive</h3>
+                            </div>
+                        </section>
                     </div>
                 </li>
             </ul>
