--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
             </div>
 
             <ul>
-                <li id="li1">
+                <li id="li1" class="top">
                     <div id="build-skill" class="skill">
                         <section class="sections">
                             <div>
@@ -27,7 +27,7 @@
                     </div>
                 </li>
 
-                <li id="li2">
+                <li id="li2" class="top">
                     <div id="plant-skill" class="skill">
                         <section class="sections">
                             <div>
@@ -38,7 +38,7 @@
                     </div>
                 </li>
 
-                <li id="li3">
+                <li id="li3" class="bottom">
                     <div id="dev-skill" class="skill">
                         <section class="sections">
                             <div>
@@ -49,7 +49,7 @@
                     </div>
                 </li>
 
-                <li id="li4">
+                <li id="li4" class="bottom">
                     <div id="defense-skill" class="skill">
                         <section class="sections">
                             <div>
@@ -60,7 +60,7 @@
                     </div>
                 </li>
 
-                <li id="li5">
+                <li id="li5" class="bottom">
                     <div id="survive-skill" class="skill">
                         <section class="sections">
                             <div>
