--- a/pages/parts/build.html
+++ b/pages/parts/build.html
@@ -6,6 +6,12 @@
         <meta charset="utf-8">
         <style>
 
+            *{
+                font-family: Arial, Helvetica, sans-serif;
+                padding: 0;
+                margin: 0;
+                box-sizing: border-box;
+            }
 
         </style>
     </head>
