--- a/pages/parts/build.html
+++ b/pages/parts/build.html
@@ -13,6 +13,10 @@
                 box-sizing: border-box;
             }
 
+            body {
+                
+            }
+
         </style>
     </head>
 
