--- a/pages/parts/build.html
+++ b/pages/parts/build.html
@@ -14,7 +14,7 @@
             }
 
             body {
-                
+                background-color: #212121;
             }
 
         </style>
