adjusted name title

--- a/pages/parts/build.html
+++ b/pages/parts/build.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Document</title>
+        <title>Build</title>
         <meta charset="utf-8">
         <style>
 
